2001-09-16  Ulrich Drepper  <drepper@redhat.com>

	* string/strcoll.c [USE_IN_EXTENDED_LOCALE_MODEL]: Correctly get
	nrules value.

2001-09-14  H.J. Lu  <hjl@gnu.org>

	* sysdeps/mips/fpu/libm-test-ulps: Updated.

2001-09-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/sys/ucontext.h: Fix a typo.
	Patch by Florian La Roche <laroche@redhat.com>.

	* string/bits/string2.h (__strtok_r_1c): Optimize a bit.

	* sysdeps/unix/sysv/linux/net/ethernet.h: Correct references to
	ETHER_CRC_LEN.

2001-09-14  Andreas Schwab  <schwab@suse.de>

	* posix/execl.c: Fix last argument of memcpy.  Reported by Brian
	Sumner <bls@sgi.com>.
	* posix/execlp.c: Likewise.

2001-09-13  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-deps.c (_dl_map_object_deps): Fix filter handling if filter
	is already found earlier in the search scope.

2001-09-12  Jakub Jelinek  <jakub@redhat.com>

	* rt/Makefile (LDFLAGS-rt.so): Use shared thread library as librt's
	filter.

2001-09-13  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/powerpc/fpu/libm-test-ulps: Adjust expected errors for j0.

2001-09-12  Ulrich Drepper  <drepper@redhat.com>

	* config.h.in: Enforce optimization to be used.
	* Makeconfig (preprocess-versions): Define ASSEMBLER.
	* stdlib/Makefile (isomac-CFLAGS): Define to -O.
	* posix/Makefile (annexc-CFLAGS): Define to -O.
	* sysdeps/unix/make-syscalls.sh: Define __OPTIMIZE__ in use of asm_CPP.

2001-09-11  Ulrich Drepper  <drepper@redhat.com>

	* nscd/nscd_gethst_r.c: Don't expect IPv6 addresses for IPv4 lookup.
	Patch by Stephan Kulow.

2001-09-08  Ben Collins  <bcollins@debian.org>

	* sysdeps/arm/dl-machine.h (elf_machine_rel): Fix thinko in
	usage of RESOLVE() (r_type, not reloc->r_type).

2001-09-08  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-object.c: Avoid allocating extra memory block for name.
	* elf/dl-close.c (_dl_close): Don't free l_libname if it is not
	allocated separately.
	* elf/dl-load.c (_dl_map_object_from_fd): Likewise.
